--- a/app/views/users/confirmation.html.erb
+++ b/app/views/users/confirmation.html.erb
@@ -1,2 +1,5 @@
-<h1>Users#confirmation</h1>
-<p>Find me in app/views/users/confirmation.html.erb</p>
+<h4>You're all set!</h4>
+
+Thanks <%= @user.name %>! You've been registered and auto-logged in.
+
+<li><a href='/'>Return Home</a></li>
