--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,56 @@
 <h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+
+<li><a href="/books/new">Add Book to List </a></li>
+
+<h4>Books to read</h4>
+
+<table>
+
+  <thead>
+    <tr>
+      <td>
+        Author
+      </td>
+      <td>
+        Title
+      </td>
+      <td>
+        Genre
+      </td>
+      <td>
+        Description
+      </td>
+      <td>
+        Edit
+      </td>
+      <td>
+        Delete
+      </td>
+    </thead>
+    <tbody>
+<% @books.each do |book| %>
+<tr>
+  <td>
+    <%= book.author %>
+  </td>
+  <td>
+    <%= book.title %>
+  </td>
+    <td>
+      <%= book.genre %>
+    </td>
+    <td>
+      <%= book.description %>
+    </td>
+    <td>
+      <button type="button">Edit NYI</button>
+    </td>
+    <td>
+    <button type="button">Delete NYI</button>
+  </td>
+</tbody>
+
+
+
+<% end %>
+</table>
